--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </form>
     <div class="option">
         <select name="" id="" class="filteroption">
-            <option value="All">All</option>
-            <option value="Completed">Complted</option>
-            <option value="Un Complted">Un Completed</option>
+            <option value="all">All</option>
+            <option value="completed">Completed</option>
+            <option value="uncomplted">Un Completed</option>
         </select>
     </div>
 
@@ -42,7 +42,7 @@
 
         </ul>
     </div>
-
+    <h2></h2>
     <script src="./app.js"></script>
 </body>
 
